--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -11,17 +12,45 @@
     "core-js": "^3.6.5",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
-    "vue": "^3.0.0",
+    "vue": "^3.2.23",
+    "vue-loader": "^16.8.3",
     "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.23",
+    "@vue/test-utils": "^1.3.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.4.0",
+    "css-loader": "^6.5.1",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "file-loader": "^6.2.0",
+    "jest": "^27.4.0",
+    "jsdom": "^18.1.1",
+    "jsdom-global": "^3.0.2",
+    "mini-css-extract-plugin": "^2.4.5",
+    "url-loader": "^4.1.1",
+    "vue-jest": "^3.0.7",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   },
   "eslintConfig": {
     "root": true,
